EventForceManagementSystem/force-app/main/default/objects/Availability__c/Availability__c.object-meta.xml
<CustomObject>
    <description>This tracks the availability of rooms.</description>
    <label>Availability</label>
    <nameField>
        <displayFormat>AV-{000000}</displayFormat>
        <label>Availability Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>