EventForceManagementSystem/force-app/main/default/objects/Availability__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>This specific cost for this night, which could vary from the default night.</description>
    <label>Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>