EventForceManagementSystem/force-app/main/default/objects/Availability__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date available.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>