EventForceManagementSystem/force-app/main/default/objects/Availability__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Availability</relationshipLabel>
    <relationshipName>Availability</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>